--- a/index.html
+++ b/index.html
@@ -5,8 +5,123 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+  <header class="main-header">
+    <div class="container">
+    <nav class="main-navigation">
+      <ul>
+        <li><a href="#">Информация</a></li>
+        <li><a href="#">Фото и видео</a></li>
+        <li><a href="#">Карта штата</a></li>
+        <li><a href="#">Гостиницы</a></li>
+      </ul>
+    </nav>
+    </div>
+  </header>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+  <main class="container">
+  <div class="index-logo">
+    <img src="img/logo.png" width="470" height="415" alt="Седона">
+  </div>
+  <section class="promo">
+  <p class="promo-item">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+  </section>
 
+
+
+  <section class="features">
+
+  <p class="features-promo">рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+  <div class="features-item">
+  <b class="features-name">Настоящий городок</b>
+  <p>№1</p>
+  <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+  </div>
+  <div class="features-image">
+    <img src="#" width="800" height="255" alt="true city">
+  </div>
+
+  <div class="little-features-item">
+  <img src="#" width="72" height="80" alt="house">
+  <b class="little-features-name">Жилье</b>
+  <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+  </div>
+
+  <div class="little-features-item">
+  <img src="#" width="72" height="80" alt="burger">
+  <b class="little-features-name">Еда</b>
+  <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+  </div>
+
+  <div class="little-features-item">
+  <img src="#" width="72" height="80" alt="souvenir">
+  <b class="little-features-name">Сувениры</b>
+  <p>Не только китайского, но и местного производства!</p>
+  </div>
+
+  <div class="features-item">
+    <div class="features-image">
+    <img src="#" width="800" height="255" alt="the devil's bridge">
+    </div>
+  <b class="features-name">Там есть мост дьявола</b>
+  <p>№2</p>
+  <p>Да, по нему можно пройти! Если, конечно, вы осмелитесь</p>
+  </div>
+
+  <div class="features-item">
+    <b class="features-name">Небольшая площадь</b>
+    <p>№3</p>
+    <p>Все достопримечательности находятся очень близко</p>
+  </div>
+
+  <div class="features-item">
+    <b class="features-name">Красивая дорога</b>
+    <p>№4</p>
+    <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+  </div>
+
+
+  <div class="features-item">
+    <b class="features-name">Мало туристов</b>
+    <p>№5</p>
+    <p>Большинство едет в Гранд-Каньон и толпится там</p>
+  </div>
+
+</section>
+
+<section class="booking">
+  <b class="booking-name">Заинтересовались?</b>
+  <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+  <div class="booking-form">
+    <p>Поиск гостиницы в Седоне</p>
+    <form action="#" method="post">
+      <label>Дата заезда:
+      <input type="text" name="date-in" value="24 апреля 2016">
+      </label>
+      <label>Дата выезда:
+      <input type="text" name="date-out" value="4 июля 2016">
+      </label>
+      <!--тут будет счетчик, но я пока не знаю, как он делается-->
+    </form>
+    <a class="booking-btn" href="#">Найти</a>
+  </div>
+</section>
+
+</main>
+
+<footer class="main-footer">
+  <div class="container">
+    <section class="footer-hashtag">
+      <a class="footer-hashtag-btn" href="#"></a>
+    </section>
+    <section class="footer-social">
+      <a class="footer-social-btn-tw" href="#"></a>
+      <a class="footer-social-btn-fb" href="#"></a>
+      <a class="footer-social-btn-ytb" href="#"></a>
+    </section>
+    <section class="copyright">
+      <a class="btn" href="#">website by</a>
+    </section>
+  </div>
+</footer>
   </body>
 </html>
