--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+<div class="container">
   <header class="main-header">
-    <div class="container">
     <nav class="main-navigation">
       <ul>
         <li><a href="#">Информация</a></li>
@@ -15,15 +15,16 @@
         <li><a href="#">Гостиницы</a></li>
       </ul>
     </nav>
+    </header>
     </div>
-  </header>
+
 
   <main class="container">
   <div class="index-logo">
-    <img src="img/logo.png" width="470" height="415" alt="Седона">
+    <img src="img/logo1.png" width="470" height="415" alt="Седона">
   </div>
   <section class="promo">
-  <p class="promo-item">Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+  <h2 class="promo-item">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
   </section>
 
 
@@ -89,7 +90,7 @@
 </section>
 
 <section class="booking">
-  <b class="booking-name">Заинтересовались?</b>
+  <h1 class="booking-name">Заинтересовались?</h1>
   <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в Седоне</p>
   <div class="booking-form">
     <p>Поиск гостиницы в Седоне</p>
